Add support for RHEL derived distributions

--- a/files/etc/logrotate.conf
+++ b/files/etc/logrotate.conf
@@ -2,8 +2,17 @@
 # OVERWRITTEN.
 
 # Default values
+
+# rotate log files weekly
 weekly
+
+# keep 4 weeks worth of backlogs
 rotate 4
+
+# create new (empty) log files after rotating old ones
 create
+
+# use date as a suffix of the rotated file
+dateext
 
 include /etc/logrotate.d
